fix: newPost textWrap center

--- a/src/components/newPost/newPost.module.css
+++ b/src/components/newPost/newPost.module.css
@@ -66,12 +66,14 @@
   transition: all 0.5s;
   width: 100%;
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .textWrap {
   width: 670px;
   position: absolute;
-  margin: 323px 0px 0px 40px;
+  margin: 323px 0px 0px 0px;
   animation: slidertop 1s;
 }
 
@@ -125,6 +127,9 @@
   }
 }
 
+@media (max-width: 400px) {
+}
+
 @media (max-width: 767px) {
   .container {
     height: 254px;
@@ -135,12 +140,14 @@
     overflow: hidden;
   }
 
-  .textWrap {
-    margin: 0;
-    margin-top: 194px;
-    margin-left: 30px;
+  .content {
+    display: flex;
+    justify-content: center;
   }
-
+  .textWrap {
+    margin-top: 194px;
+    margin-left: 0px;
+  }
   .title {
     font-size: 24px;
     height: 24px;
